# Froggix

./: Makefile.am  README.md  autogen.sh  build-linux.sh  build-win32.sh  clean.sh  configure.ac  froggix.c  mkinstalldirs
images/working/: LINK  frogger.xcf  scoreTest  scoreTest.c
src/: Makefile.am  froggix.c
